@@ -16,6 +16,7 @@ Changes in version 1.1-0 (xx/xx/2015)
     * pimage gained axes and prop. Interface was simplified.
     * control arguments for seriation are now checked consistently.
     * We use now package registry to manage methods.
+    * Added reorder for hclust.
 
 Changes in version 1.0-14 (12/02/2014) 
     * arsa.f: removed 0 flag in rand() so it compiles under AIX 
